<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:id="@+id/mainBrowserLayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >



    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drink_browser_ui"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff6f6f6"

        >
        <RelativeLayout
            android:id="@+id/booze_banner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"

            >
            <ImageView
                android:id="@+id/beer_banner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/beericon"
                android:visibility="invisible"
                android:scaleType="fitStart"
                android:adjustViewBounds="true"

                />
            <ImageView
                android:id="@+id/wine_banner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/wineicon"
                android:visibility="invisible"
                android:scaleType="fitStart"
                android:adjustViewBounds="true"
                />
            <ImageView
                android:id="@+id/cocktail_banner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/cocktailicon"
                android:visibility="invisible"
                android:scaleType="fitStart"
                android:adjustViewBounds="true"
                />
            <ImageView
                android:id="@+id/liquor_banner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/liquoricon"
                android:visibility="invisible"
                android:scaleType="fitStart"
                android:adjustViewBounds="true"
                />

            <LinearLayout
                android:id="@+id/filter_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/beer_banner"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:weightSum="5"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:background="@color/white00"
                    android:padding="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    >
                    <Button
                        android:id="@+id/submit_abv"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@drawable/shape01"
                        android:layout_marginRight="3dp"
                        android:text="@string/update_bac"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        />
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:weightSum="3"
                        >
                        <TextView
                            android:id="@+id/qty"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:text="@string/volume"
                            android:textSize="15sp"
                            android:textColor="@color/black00"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight=".8"
                            />
                        <EditText
                            android:id="@+id/qtyInput"
                            android:hint="@string/oz"
                            android:textSize="30sp"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:gravity="center_horizontal"
                            android:layout_weight="2.2"

                            />

                    </LinearLayout>


                </LinearLayout>
                <RelativeLayout
                    android:id="@+id/filter_ui_container"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    >
                    <TextView
                        android:id="@+id/filter_label"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/filter_label"
                        android:textSize="18sp"
                        android:textColor="@color/black00"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginRight="10dp"
                        />
                    <EditText
                        android:id="@+id/filter_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/filter_hint"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:background="@drawable/filter_back"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_toRightOf="@+id/filter_label"
                        />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/list_cont"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:orientation="vertical"
            android:weightSum="10"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight=".7"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"

                    >
                    <TextView
                        android:id="@+id/name_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/name_Ulabel"
                        android:textSize="20sp"
                        android:textColor="@color/black00"
                        android:gravity="center"
                        android:textStyle="bold"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/down"
                        android:layout_alignBottom="@+id/name_label"
                        android:layout_toRightOf="@+id/name_label"
                        android:scaleType="fitStart"
                        />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"

                    >
                    <TextView
                        android:id="@+id/abv_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/ABV_Ulabel"
                        android:textSize="20sp"
                        android:textColor="@color/black00"
                        android:gravity="center"
                        android:textStyle="bold"
                        />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/down"
                        android:layout_alignBottom="@+id/abv_label"
                        android:layout_toRightOf="@+id/abv_label"
                        android:scaleType="fitStart"
                        />


                </RelativeLayout>






            </LinearLayout>

            <RelativeLayout
                android:id="@+id/ListViewContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="8.3"

                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white00"
                    android:alpha="0.9"
                    />

                <ListView
                    android:id="@+id/list_major"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    >

                </ListView>


            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="4"
                android:gravity="center_horizontal"
                >

                <Button
                    android:id="@+id/new_drink"
                    android:text="@string/custom_drink"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape04"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    />

            </LinearLayout>





        </LinearLayout>

    </LinearLayout>


        <FrameLayout
            android:id="@+id/new_drink_frag_cont"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


        </FrameLayout>



</RelativeLayout>
